--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,22 @@
 version: '3'
 
 volumes:
-  pg_data:
+  kittygram_data:
   static:
 
 services:
-  db:
+  kittygram_db:
     image: postgres:13
+    env_file: .env
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - kittygram_data:/var/lib/postgresql/data
   backend:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static:/backend_static
+    depends_on:
+      - kittygram_db
   frontend:
     env_file: .env
     build: ./frontend/
@@ -22,6 +27,6 @@ services:
     build: ./nginx/
     env_file: .env
     ports:
-      - 9000:80
+      - 8080:80
     volumes:
       - static:/static
