--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -15,13 +15,13 @@ services:
     volumes:
       - static_volume:/backend_static
   frontend:
-    image: redc0mrade/kittygram_frontend  # Качаем с Docker Hub
+    image: redc0mrade/kittygram_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: redc0mrade/kittygram_gateway  # Качаем с Docker Hub
+    image: redc0mrade/kittygram_gateway
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
