--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,29 +1,37 @@
 version: '3'
 
 volumes:
-  pg_data_production:
-  static_volume:
+  pg_data:
+  static:
+  media:
+
 services:
-  db:
+  kittygram_db:
     image: postgres:13.10
     env_file: .env
     volumes:
-      - pg_data_production:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
   backend:
     image: redc0mrade/kittygram_backend
     env_file: .env
     volumes:
-      - static_volume:/backend_static
+      - static:/backend_static
+      - media:/app/media/
+    depends_on:
+      - db
   frontend:
     image: redc0mrade/kittygram_frontend
     env_file: .env
-    command: cp -r /app/build/. /frontend_static/
+    command: cp -r /app/build/. /static/
     volumes:
-      - static_volume:/frontend_static
+      - static:/static
   gateway:
     image: redc0mrade/kittygram_gateway
     env_file: .env
     volumes:
-      - static_volume:/staticfiles/
+      - static:/static/
+      - media:/app/media/
     ports:
-      - 8080:80
+      - 9000:80
+    depends_on:
+      - frontend
