--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -18,7 +18,7 @@ services:
       - static:/backend_static
       - media:/app/media/
     depends_on:
-      - db
+      - kittygram_db
   frontend:
     image: redc0mrade/kittygram_frontend
     env_file: .env
