--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
 version: '3'
 
 volumes:
-  kittygram_data:
+  pg_data:
   static:
   media:
 
 services:
-  kittygram_db:
+  db:
     image: postgres:13
     env_file: .env
     volumes:
-      - kittygram_data:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
   backend:
     build: ./backend/
     env_file: .env
     volumes:
-      - static:/backend_static
+      - static:/backend_static/
       - media:/app/media/
     depends_on:
-      - kittygram_db
+      - db
   frontend:
     env_file: .env
     build: ./frontend/
@@ -31,5 +31,7 @@ services:
     ports:
       - 9000:80
     volumes:
-      - static:/static
-      - media:/media
+      - static:/static/
+      - media:/app/media/
+    depends_on:
+      - frontend
