--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,22 +1,22 @@
 version: '3'
 
 volumes:
-  pg_data:
-  static:
-  media:
+  pg_data_production:
+  static_volume:
+  media_volume:
 
 services:
   db:
     image: postgres:13.10
     env_file: .env
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - pg_data_production:/var/lib/postgresql/data
   backend:
     image: redc0mrade/kittygram_backend:latest
     env_file: .env
     volumes:
-      - static:/backend_static
-      - media:/app/media/
+      - static_volume:/backend_static/
+      - media_volume:/media/
     depends_on:
       - db
   frontend:
@@ -24,13 +24,13 @@ services:
     env_file: .env
     command: cp -r /app/build/. /static/
     volumes:
-      - static:/static
+      - static_volume:/static/
   gateway:
     image: redc0mrade/kittygram_gateway:latest
     env_file: .env
     volumes:
-      - static:/static/
-      - media:/app/media/
+      - static_volume:/backend_static/
+      - media_volume:/media/
     ports:
       - 9000:80
     depends_on:
