--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -15,8 +15,8 @@ services:
     image: redc0mrade/kittygram_backend:latest
     env_file: .env
     volumes:
-      - static_volume:/backend_static/
-      - media_volume:/media/
+      - static_volume:/backend_static
+      - media_volume:/media
     depends_on:
       - db
   frontend:
@@ -24,14 +24,15 @@ services:
     env_file: .env
     command: cp -r /app/build/. /static/
     volumes:
-      - static_volume:/static/
+      - static_volume:/static
   gateway:
     image: redc0mrade/kittygram_gateway:latest
     env_file: .env
     volumes:
-      - static_volume:/static/
-      - media_volume:/media/
+      - static_volume:/static
+      - media_volume:/media
     ports:
       - 9000:80
     depends_on:
       - frontend
+      - backend
