--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     build: ./backend/
     env_file: .env
     volumes:
-      - static:/backend_static/
-      - media:/media/
+      - static:/backend_static
+      - media:/media
     depends_on:
       - db
   frontend:
@@ -31,7 +31,8 @@ services:
     ports:
       - 9000:80
     volumes:
-      - static:/static/
-      - media:/media/
+      - static:/static
+      - media:/media
     depends_on:
       - frontend
+      - backend
