--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -4,12 +4,21 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
   }
+
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/admin/;
   }
-  location / {
-    alias /staticfiles/;
-    index index.html;
+
+    location /media/ {
+    proxy_set_header Host $http_host;
+    alias /media/;
   }
+
+  location / {
+    proxy_set_header Host $http_host;
+    alias /static/;
+    try_files $uri $uri/ /index.html;
+  }
+  
 }
