--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
   media:
 
 services:
-  db:
+  kittygram_db:
     image: postgres:13
     env_file: .env
     volumes:
@@ -18,7 +18,7 @@ services:
       - static:/backend_static
       - media:/media
     depends_on:
-      - db
+      - kittygram_db
   frontend:
     env_file: .env
     build: ./frontend/
