--- a/tests.yml
+++ b/tests.yml
@@ -1,4 +1,4 @@
 repo_owner: RedC0mrade
-kittygram_domain: kittygran.hopto.org
+kittygram_domain: https://kittygran.hopto.org
 taski_domain: qqqwwweee.ddns.net
 dockerhub_username: redC0mrade
