--- a/tests.yml
+++ b/tests.yml
@@ -1,4 +1,4 @@
-repo_owner: RedC0mrade
+repo_owner: redC0mrade
 kittygram_domain: https://kittygran.hopto.org
 taski_domain: https://qqqwwweee.ddns.net
 dockerhub_username: redc0mrade
