--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Main Kittygram workflow
 
 on:
   push:
-
+    branches:
+      - '*'
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -39,16 +40,11 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
-
-
-  push:
-    branches:
-      - main
-
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: tests
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
